# mongodb-chemistry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MODERNIZATION.md  Makefile  PRE_COMMIT_SUMMARY.md  QUICK_REFERENCE.md  README.md  UPGRADE.md  pyproject.toml  requirements.txt
.github/: DEV_SETUP.md  PRE_COMMIT_CHECKLIST.md
.github/workflows/: ci.yml
mchem/: __init__.py  build.py  cli.py  fps.py  plot.py  postgres.py  profile.py  screening.py  similarity.py
tests/: __init__.py  conftest.py  test_basic.py  test_build.py  test_fps.py  test_similarity.py
